yeni bir log eklendiğinde mail atma özelliği eklendi

--- a/ServicesManagmentApi/appsettings.json
+++ b/ServicesManagmentApi/appsettings.json
@@ -1,4 +1,11 @@
 {
+  "AppSettings": {
+    "EmailFrom": "info@service-management-api.com",
+    "SmtpHost": "smtp.ethereal.email",
+    "SmtpPort": 587,
+    "SmtpUser": "syrach3tudd2tjha@ethereal.email",
+    "SmtpPass": "SKbMbFCEaYybz1QHR5"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
