account tüm katmanlara eklendi

--- a/ServicesManagmentApi/appsettings.json
+++ b/ServicesManagmentApi/appsettings.json
@@ -1,5 +1,6 @@
 {
   "AppSettings": {
+    "Secret": "b4c3658c-c57b-484b-93cf-2ed8a7b4282b671c4645-0c8b-4239-bbc5-361ef4f72209fceee566-6271-47bf-910a-0e6d96254bf3",
     "EmailFrom": "info@service-management-api.com",
     "SmtpHost": "smtp.ethereal.email",
     "SmtpPort": 587,
