--- a/Repository/Repository.csproj
+++ b/Repository/Repository.csproj
@@ -6,6 +6,7 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
  <ItemGroup>
+    <PackageReference Include="EntityFramework" Version="6.2.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.5" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.5">
       <PrivateAssets>all</PrivateAssets>
